<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="button_text1">Spotify Streamer</string>
    <string name="button_text2">Scores App</string>
    <string name="button_text3">Library App</string>
    <string name="button_text4">Build It Bigger</string>
    <string name="button_text5">XYZ Reader</string>
    <string name="button_text6">Capstone: My New App</string>
</resources>
